--- a/modules/pages/intro.adoc
+++ b/modules/pages/intro.adoc
@@ -1,9 +1,24 @@
-When Johan Heinrich Krückeberg arrived with his family from the ship _____ at Castle
-Garden (today Battery Park in south Manhattan), he likely head  up the Hudson river in the coming days to
+When Johan Heinrich Krückeberg arrived with his family from the ship _____ at Castle 
+
+[mention the ships name from citation]
+
+Garden (today Battery Park in south Manhattan),
+
+[mention here the obit of CHW K.? that describes they route his famly took 1850 from NYC they took to Fort Wayne]
+
+mention:
+
+1. they left from Bremen, whose records were systemcatically destroyed (Andrea Bentschneider)
+2. mention the length of the journey (Andrea)
+3. mention other aspects of the journey
+
+he likely head  up the Hudson river in the coming days to
 Albany, where they would travel on a camnal boat along the Erie canal to _____; there the'd disembark and
 travel by sailboat down Lake Erie to Toledo, where they would take the Wabsh/Erie canal to Fort Wayne and get off a the Landing.
 get
 on 
+
+[transitions to his fincnacil troubles as described in arhive cawse file 689]
 
  he had left behind several years of
 terrible financial trials that began in 183[3/6] and didn't end until
