--- a/intro.adoc
+++ b/intro.adoc
@@ -18,6 +18,10 @@ travel by sailboat down Lake Erie to Toledo, where they would take the Wabsh/Eri
 get
 on 
 
+mention: why we know wher he is from:
+1.) two immanuel lutheran bios, his and CHW K's, and
+2.) the Emigrant CFK family records.
+
 [transitions to his fincnacil troubles as described in arhive cawse file 689]
 
  he had left behind several years of
