--- a/intro.adoc
+++ b/intro.adoc
@@ -6,38 +6,11 @@ Garden (today Battery Park in south Manhattan),
 
 [mention here the obit of CHW K.? that describes they route his famly took 1850 from NYC they took to Fort Wayne]
 
-mention:
+=== Castle Garden and todays' Castle Clinton National Monu mnet
 
-1. they left from Bremen, whose records were systemcatically destroyed (Andrea Bentschneider)
-2. mention the length of the journey (Andrea)
-3. mention other aspects of the journey
+in Battery Park.
 
-he likely head  up the Hudson river in the coming days to
-Albany, where they would travel on a camnal boat along the Erie canal to _____; there the'd disembark and
-travel by sailboat down Lake Erie to Toledo, where they would take the Wabsh/Erie canal to Fort Wayne and get off a the Landing.
-get
-on 
-
-mention: why we know wher he is from:
-1.) two immanuel lutheran bios, his and CHW K's, and
-2.) the Emigrant CFK family records.
-
-[transitions to his fincnacil troubles as described in arhive cawse file 689]
-
- he had left behind several years of
-terrible financial trials that began in 183[3/6] and didn't end until
-1845, when he was left a lot poorer. 
-
-It had all came to a head in ??? 1841 when ??? arrived at his home.
-  
-  
-mention: 
-1. marriage contracts
-2. society
-3. government
-4. literacy
-
-=== Possilbe Route to Fort Wayne
+=== Possible Route to Fort Wayne
 
 The Erie Canal route to Fort Wayne was available was both available and common in 1850, and
 it’s very plausible your family used it.
@@ -111,3 +84,34 @@ Books I own:
 * The BOOK I own about the Erie canal
 * The William Dollarhide BOOK on early transportation routes
 * Peopleing Indiana
+mention:
+
+1. they left from Bremen, whose records were systemcatically destroyed (Andrea Bentschneider)
+2. mention the length of the journey (Andrea)
+3. mention other aspects of the journey
+
+he likely head  up the Hudson river in the coming days to
+Albany, where they would travel on a camnal boat along the Erie canal to _____; there the'd disembark and
+travel by sailboat down Lake Erie to Toledo, where they would take the Wabsh/Erie canal to Fort Wayne and get off a the Landing.
+get
+on 
+
+mention: why we know wher he is from:
+1.) two immanuel lutheran bios, his and CHW K's, and
+2.) the Emigrant CFK family records.
+
+[transitions to his financial troubles as described in arhive cawse file 689]
+
+ he had left behind several years of
+terrible financial trials that began in 183[3/6] and didn't end until
+1845, when he was left a lot poorer. 
+
+It had all came to a head in ??? 1841 when ??? arrived at his home.
+  
+  
+mention: 
+1. marriage contracts
+2. society
+3. government
+4. literacy
+
