--- a/intro.adoc
+++ b/intro.adoc
@@ -45,7 +45,7 @@ early December, so an arrival on November 19 was late but still within
 the usual navigation window; they likely had to move quickly, and
 weather on Lake Erie could be dicey. ([USGS Publications Warehouse][5])
 
-== Possible alternative (also plausible in 1850)
+== Possible alternate routes
 
 By late 1850 there was already *through railroad service across New York
 State* (Albany ↔ Buffalo via consolidated lines), which some travelers
@@ -84,7 +84,8 @@ Books I own:
 * The BOOK I own about the Erie canal
 * The William Dollarhide BOOK on early transportation routes
 * Peopleing Indiana
-mention:
+
+== Bremen 
 
 1. they left from Bremen, whose records were systemcatically destroyed (Andrea Bentschneider)
 2. mention the length of the journey (Andrea)
@@ -96,7 +97,7 @@ travel by sailboat down Lake Erie to Toledo, where they would take the Wabsh/Eri
 get
 on 
 
-mention: why we know wher he is from:
+== why we know wher he is from:
 1.) two immanuel lutheran bios, his and CHW K's, and
 2.) the Emigrant CFK family records.
 
@@ -108,9 +109,9 @@ terrible financial trials that began in 183[3/6] and didn't end until
 
 It had all came to a head in ??? 1841 when ??? arrived at his home.
   
-  
-mention: 
-1. marriage contracts
+== mention: marriage contracts
+
+== mention ...
 2. society
 3. government
 4. literacy
