--- a/nyc-arrival-place-process-1849-1850.adoc
+++ b/nyc-arrival-place-process-1849-1850.adoc
@@ -1,3 +1,7 @@
+# Immigrant Ship Arrivals Prior to 1855
+
+## Arrival Place and Process pre-1855
+
 **Castle Garden (Castle Clinton) didn’t become an immigration depot until August 3, 1855.** So arrivals in
 **1849–1850** were **not processed or landed at Castle Garden**. ([National Park Service][1])
 
@@ -54,4 +58,71 @@ Street/East River)** and disembarked there—not by small boats from Castle Gard
 [2]: https://www.nps.gov/cacl/learn/historyculture/castle-garden-emigrant-depot.htm?utm_source=chatgpt.com "Castle Garden Emigrant Depot"
 [3]: https://southstreetseaportmuseum.org/history-of-the-seaport/?utm_source=chatgpt.com "The History of the Seaport"
 [4]: https://www.ggarchives.com/OceanTravel/Passengers/Ports/Bremen-PassengerLists.html?utm_source=chatgpt.com "Bremen Passenger Lists 1881-1951"
+
+## Articles to consult
+
+Yes—there are several solid, readable pieces that explain how arrivals worked **before 1855** (i.e., quarantine off Staten Island, then docking at Manhattan piers rather than Castle Garden). Here are good starting points:
+
+* **NPS history on Castle Garden’s start (context for the “pre-” era):** concise background that Castle Garden opened
+  **Aug. 3, 1855**, so anything earlier followed the older practice outside Castle Garden. ([NPS History][1])
+* **South Street Seaport Museum (where ships actually tied up):** short histories confirming South Street/East River
+  as New York’s principal seaport through the mid-19th century. ([South Street Seaport Museum][2])
+* **Quarantine overviews (Staten Island Marine Hospital):**
+
+  * CSH Whaling Museum blog: plain-English summary that by **1846 all ships** anchored off Staten Island for inspection. ([THE WHALING MUSEUM][3])
+  * National Lighthouse Museum paper (PDF): history of the **Tompkinsville Quarantine** (opened 1799) and later facilities. ([National Lighthouse Museum][4])
+  * Gotham Center blog essay (2025): narrative history of the Staten Island Quarantine and the 1858 destruction—useful for context. ([Gotham Center][5])
+* **Genealogist-oriented guides:**
+
+  * **NYG&B** “New York Immigration Records Online” (with references to deeper guides covering the **pre-Castle Garden**
+    period). ([New York Family History][6])
+  * **FamilySearch** overview of Castle Garden/Ellis Island records (helps frame what exists for **pre-1855** and after).
+    ([FamilySearch][7])
+
+If you want to get **pier-level detail** for a specific voyage (e.g., your ship in 1849/1850), pair the exact
+arrival date + ship name with **New York newspaper “Shipping News”** columns—those often name the **agent and
+wharf**. The South Street Seaport Museum’s pieces give context for where to expect those wharves. ([South Street
+Seaport Museum][2])
+
+Happy to chase your ancestors’ **ship + date** in historical newspapers and pull the likely **pier/agent** for you.
+
+[1]: https://npshistory.com/publications/cacl/castle_garden.pdf?utm_source=chatgpt.com "Castle Garden as an Immigrant Depot, 1855-1890"
+[2]: https://southstreetseaportmuseum.org/history-of-the-seaport/?utm_source=chatgpt.com "The History of the Seaport"
+[3]: https://www.cshwhalingmuseum.org/blog/the-history-of-quarantine-in-new-york-harbor-and-long-island?utm_source=chatgpt.com "The HISTORY OF Quarantine in New York Harbor and ..."
+[4]: https://lighthousemuseum.org/wp-content/uploads/2020/04/Matt-Connor-Quarantine-NY-Article-555KBwecompress.com_.pdf?utm_source=chatgpt.com "Quarantine in New York: A Historical Context"
+[5]: https://www.gothamcenter.org/blog/quarantinestatenisland-zy4la-6h6h4-tlwga-allfs-5gpbn-p8hkk-gewm2-86weg-453lp-rtg9j-b4nt8-f2n45-2s22f-kmea4-5jtmm-a2l5n-ljflg-bbjh6-82t6p-w9slx-nhf8r-egskg?utm_source=chatgpt.com "Quarantine Scenes in Staten Island History"
+[6]: https://www.newyorkfamilyhistory.org/subject-guide/new-york-immigration-records-online?utm_source=chatgpt.com "New York Immigration Records Online"
+[7]: https://www.familysearch.org/en/blog/ny-castle-garden-ellis-island?utm_source=chatgpt.com "Castle Garden: Immigration Before Ellis Island"
+
+## Strategy for Finding the Arrival Pier
+
+Great question. In the late-1840s/1850s New York papers ran daily “Ship/Marine” columns—often titled **Ship News**, **Shipping Intelligence**, **Marine Intelligence**, or **Marine Journal**. Titles that regularly carried these columns included:
+
+* **New York Herald** (daily). A core paper for harbor reports. ([New York State Library][1])
+* **Journal of Commerce** (daily). A leading commercial sheet; central to marine reporting. ([New York State Library][1])
+* **New-York Tribune** (daily). Ran a **“Marine Intelligence”** section. ([NYPL LibGuides][2])
+* **Evening Post** (daily). Pages labeled **“Marine Intelligence.”** ([Newspapers][3])
+* **Courier & Enquirer** (daily). Another harbor-heavy commercial daily. ([New York State Library][1])
+* **New York Express** (daily). Part of the same harbor-news ecosystem. ([WorldCat][4])
+* **New-York Daily Times** (from Sept 1851; later the New York Times) also carried **Marine Intelligence**. ([Wikisource][5])
+
+Handy tip: librarians note the **column name varies by paper**—so search for any of the headings above. ([NYPL LibGuides][6])
+
+**Where to read them online (often free with a library card):**
+
+* **NYPL** guides/databases (great entry points to digitized NYC papers). ([NYPL LibGuides][7])
+* **NYS Historic Newspapers** (indexes many New York titles). ([NYPL][8])
+
+Search strategy: use the **ship name + exact arrival date** and check the **day of arrival and the next 1–2 days** in the papers above; look under sections “Arrived,” “Cleared,” and “Advertisements” (agents often list **regular berth/pier** there). The **Harbor (Marine) News Association** coordinated ship reports among the Herald, Sun, Journal of Commerce, Courier & Enquirer, Express, and Tribune—so the same ship info often appears across multiple titles. ([WorldCat][4])
+
+If you share your ship name and date, I can pull likely **agent + wharf/pier** hits from those columns.
+
+[1]: https://www.nysl.nysed.gov/nysnp/title4?utm_source=chatgpt.com "NYS newspapers on microfilm and paper at all NYS locations"
+[2]: https://libguides.nypl.org/historicaltravels/additionalresources?utm_source=chatgpt.com "Historical Travels: Additional Resources - NYPL Libguides"
+[3]: https://www.newspapers.com/newspage/32257303/?utm_source=chatgpt.com "The Evening Post from New York, New York • Page 1"
+[4]: https://search.worldcat.org/de/title/Harbor-News-Association.-%3A-It-is-mutually-agreed-by-Messrs.-Hale-and-Hallock-of-the-New-York-journal-of-commerce-Beach-Bros.-of-the-New-York-Sun-James-Gordon-Bennett-of-the-New-York-herald-James-Watson-Webb-of-the-New-York-Courier-and-enquirer-James-and-Erastus-Brooks-of-the-New-York-express-and-Greeley-and-McElrath-of-the-New-York-tribune-to-associate-for-the-purpose-of-collecting-marine-intelligence-under-the-following-regulations-../oclc/80771643?utm_source=chatgpt.com "It is mutually agreed by Messrs. Hale & Hallock, of the New York ..."
+[5]: https://en.wikisource.org/wiki/History_of_American_Journalism/Chapter_15?utm_source=chatgpt.com "History of American Journalism/Chapter 15 - Wikisource"
+[6]: https://libguides.nypl.org/newspapers_genealogy/maritime?utm_source=chatgpt.com "Maritime - Newspapers in Genealogy and Local History ..."
+[7]: https://libguides.nypl.org/newspapers_genealogy?utm_source=chatgpt.com "Newspapers in Genealogy and Local History Research"
+[8]: https://www.nypl.org/collections/articles-databases/nys-historic-newspapers?utm_source=chatgpt.com "NYS Historic Newspapers"
 
