--- a/story.adoc
+++ b/story.adoc
@@ -104,7 +104,8 @@ Books I own:
 
 == Bremen 
 
-1. they left from Bremen, whose records were systemcatically destroyed (Andrea Bentschneider)
+1. they left from Bremen, whose records were systemcatically destroyed
+Footnote: https://www.familysearch.org/en/wiki/Bremen_Emigration_and_Immigration
 2. mention the length of the journey (Andrea)
 3. mention other aspects of the journey
 
