--- a/story.adoc
+++ b/story.adoc
@@ -23,7 +23,7 @@ offers these other details:
 
 Garden (today Battery Park in south Manhattan),
 
-[mention here the obit of CHW K.? that describes they route his famly took 1850 from NYC they took to Fort Wayne]
+mention here: the obit of CHW K.? that describes they route his famly took 1850 from NYC they took to Fort Wayne
 
 == Arrival in NYC
 
@@ -134,7 +134,8 @@ It had all came to a head in ??? 1841 when ??? arrived at his home.
 == mention: marriage contracts
 
 == mention ...
-2. society
-3. government
-4. literacy
+[arabic]
+. society
+. government
+. literacy
 
