--- a/story.adoc
+++ b/story.adoc
@@ -1,12 +1,16 @@
 = Johann Heinrich Krückeberg Story
 
-When Johan Heinrich Krückeberg arrived with his family on the ship Orion on November 5, 1849. 
+When Johan Heinrich Krückeberg arrived with his family on the ship Orion on
+November 5, 1849. 
 
-His father died in 1822 of xxx at age xxx when his son was age xxx;
-his mother had been reduced to poverty by the medical expenses from his
-father's life long illness;
-in 18xx the Amt in Bückeberg decreed Johann Heinrich had 14 days to pay a debt of 200
-reichthslers, a year's salary, or his farmstead would be forceably sold to cover the debt.
+Johann Heinrich and his mother had been through many trials since the death of
+father, Jobst Heinrich, who died in 1822 of convulsions & hemorrhanging at age
+58 when his son was age xxx; his mother had been reduced to poverty by the
+many doctor and pharmacist fees spent on his father's many life long illness;
+Johann Heinrich's debts caught up with him, too, in 1841, when the Amt in
+Bückeberg issued a default judgement ordering him to pay 200 Reichstahler,
+nearly a years wage, owed a leather goods store in Minden; if he did not pay
+within 14 days, his farmstead would be forceably sold to cover the debt.
 
 The Orion Passenger List Header:
 
