--- a/story.adoc
+++ b/story.adoc
@@ -4,13 +4,13 @@ When Johan Heinrich Krückeberg arrived with his family on the ship Orion on
 November 5, 1849. 
 
 Johann Heinrich and his mother had been through many trials since the death of
-father, Jobst Heinrich, who died in 1822 of convulsions and hemorrhanging, age
+his father, Jobst Heinrich, who died in 1822 of convulsions and hemorrhanging, age
 58, when his son was age xxx; his mother had been reduced to poverty by doctor
 and pharmacist fees spent on his father's life long illness; Johann Heinrich's
 debts caught up with him, too, in 1841, when the Amt in Bückeberg issued a
 default judgement ordering him to pay 200 Reichstahler, nearly a year's wage,
-owed a leather goods store in Minden; if he did not pay within 14 days, his
-farmstead would be forceably sold to cover the debt.
+to Hempel and Sons, a leather goods business in Minden; failure to pay within 14 days
+would result in the forceabele sale of his farmstead to cover the debt.
 
 The Orion Passenger List Header:
 
