--- a/story.adoc
+++ b/story.adoc
@@ -4,13 +4,14 @@ When Johan Heinrich Krückeberg arrived with his family on the ship Orion on
 November 5, 1849. 
 
 Johann Heinrich and his mother had been through many trials since the death of
-his father, Jobst Heinrich, who died in 1822 of convulsions and hemorrhanging, age
-58, when his son was age xxx; his mother had been reduced to poverty by doctor
-and pharmacist fees spent on his father's life long illness; Johann Heinrich's
-debts caught up with him, too, in 1841, when the Amt in Bückeberg issued a
+his father, Jobst Heinrich, in 1822 at age 58. His mother had been reduced to poverty
+by the many doctor and pharmacist fees spent on his father's life long illness. Debt
+debts caught up with Johann Heinrch, too, in 1841, when the Amt in Bückeberg issued a
 default judgement ordering him to pay 200 Reichstahler, nearly a year's wage,
 to Hempel and Sons, a leather goods business in Minden; failure to pay within 14 days
-would result in the forceabele sale of his farmstead to cover the debt.
+would result in the forceabele sale of his farmstead to cover the debt. To top it all off,
+the debt was his father's. The law made the heir of a debtor responsible
+for complete payment of both the principal and all accrued interest.
 
 The Orion Passenger List Header:
 
