--- a/story.adoc
+++ b/story.adoc
@@ -3,9 +3,9 @@
 When Johan Heinrich Krückeberg arrived with his family on the ship Orion on
 November 5, 1849. 
 
-Johann Heinrich Krückeberg was a man who suffered many troubles that took him on a long, complicated journey.
-That journey lasted 27 years. It began in 1822 when his father died, and it ended in 1849 when he, his wife and three daughter
-reached Union township, Adams County, Indiana.
+Johann Heinrich Krückeberg was a man who suffered many troubles that took him on a long, complicated journey
+that began in 1822 when his father died, and lasted 27 years until 1849 when he, his wife and
+three daughters reached Union township, Adams County, Indiana.
 
 In 1822 his father Jobst Heinrich
 Johann Heinrich and his mother had been through many trials since the death of
