--- a/story.adoc
+++ b/story.adoc
@@ -4,8 +4,9 @@ When Johan Heinrich Krückeberg arrived with his family on the ship Orion on
 November 5, 1849. 
 
 Johann Heinrich Krückeberg was a man who suffered many troubles that took him on a long, complicated journey
-that began in 1822 when his father died, and lasted 27 years until 1849 when he, his wife and
-three daughters reached Union township, Adams County, Indiana.
+begining in 1822, when his father died, and lasting 27 years until 1849, when his family
+family reached Union township, Adams County, Indiana, were they were greeted by his older sister
+and his brother-in-law, who had been there XXX years.
 
 In 1822 his father Jobst Heinrich
 Johann Heinrich and his mother had been through many trials since the death of
