--- a/story.adoc
+++ b/story.adoc
@@ -6,7 +6,7 @@ November 5, 1849.
 Johann Heinrich Krückeberg was a man who suffered many troubles that took him on a long, complicated journey
 begining in 1822, when his father died, and lasting 27 years until 1849, when his family
 family reached Union township, Adams County, Indiana, were they were greeted by his older sister
-and his brother-in-law, who had been there XXX years.
+and his brother-in-law, who had been already there XXX years.
 
 In 1822 his father Jobst Heinrich
 Johann Heinrich and his mother had been through many trials since the death of
