--- a/story.adoc
+++ b/story.adoc
@@ -5,8 +5,8 @@ November 5, 1849.
 
 Johann Heinrich Krückeberg was a man who suffered many troubles that took him on a long, complicated journey
 beginning in 1822, when his father died, and lasting 27 years till 1849 when he and his family
-set foot in Union township, Adams County, Indiana, where they were greeted by his older sister
-and his brother-in-law, who had been there XXX years.
+set foot in Union township, Adams County, Indiana, where they were greeted by his older sister's
+family, who been there XXX years.
 
 In 1822 his father Jobst Heinrich
 Johann Heinrich and his mother had been through many trials since the death of
