--- a/story.adoc
+++ b/story.adoc
@@ -1,8 +1,5 @@
 = Johann Heinrich Krückeberg Story
 
-When Johan Heinrich Krückeberg arrived with his family on the ship Orion on
-November 5, 1849. 
-
 Johann Heinrich Krückeberg was a man who suffered many troubles that took him on a long, complicated journey
 beginning in 1822, when his father died, and lasting 27 years till 1849 when he and his family
 set foot in Union township, Adams County, Indiana, where they were greeted by his older sister's
@@ -18,6 +15,9 @@ to Hempel and Sons, a leather goods business in Minden; failure to pay within 14
 would result in the forceabele sale of his farmstead to cover the debt. To top it all off,
 the debt was his father's. The law made the heir of a debtor responsible
 for complete payment of both the principal and all accrued interest.
+
+Johan Heinrich Krückeberg arrived with his family on the ship Orion on
+November 5, 1849. 
 
 The Orion Passenger List Header:
 
